# learnrust

collections/src/: main.rs
enums/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hashmaps/src/: main.rs
hello/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
strings/src/: main.rs
traits/src/: lib.rs  main.rs
variables/src/: main.rs
