[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort" # abort instead of unwinding -> when panicing program will stop
# immediately without releasing memory
